<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.MaterialComponents.DayNight">


    <TextView
        android:id="@+id/notifTitleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/main_margin"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/notifications"
        android:textColor="@color/black"
        android:textSize="@dimen/smaller_title_size"
        app:layout_constraintEnd_toStartOf="@id/notification"
        app:layout_constraintStart_toEndOf="@id/arrowBack"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/arrowBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_margin"
        android:background="?android:attr/selectableItemBackground"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintBottom_toBottomOf="@id/notifTitleTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/notifTitleTV"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/main_margin"
        android:background="?android:attr/selectableItemBackground"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_bell"
        app:layout_constraintBottom_toBottomOf="@id/notifTitleTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/notifTitleTV"
        tools:ignore="TouchTargetSizeCheck" />

    <View
        android:id="@+id/sectionLine"
        style="@style/SectionLineStyle"
        android:layout_margin="@dimen/main_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notifTitleTV" />

    <ImageView
        android:id="@+id/bellIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/main_margin"
        android:src="@drawable/ic_bell_big"
        app:layout_constraintBottom_toTopOf="@id/noNotifTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <TextView
        android:id="@+id/noNotifTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/no_notifs_yet"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/bigger_text_size"
        app:layout_constraintBottom_toTopOf="@id/sectionLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <TextView
        android:id="@+id/noNotifDescriptionTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/no_notif_description"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textSize="@dimen/regular_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/noNotifTV" />
</androidx.constraintlayout.widget.ConstraintLayout>