<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.MaterialComponents.DayNight">

    <TextView
        android:id="@+id/detailsTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/main_margin"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/details"
        android:textColor="@color/black"
        android:textSize="@dimen/smaller_title_size"
        app:layout_constraintEnd_toStartOf="@id/notification"
        app:layout_constraintStart_toEndOf="@id/arrowBack"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/arrowBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_margin"
        android:background="?android:attr/selectableItemBackground"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintBottom_toBottomOf="@id/detailsTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/detailsTV"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/main_margin"
        android:background="?android:attr/selectableItemBackground"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_bell"
        app:layout_constraintBottom_toBottomOf="@id/detailsTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/detailsTV"
        tools:ignore="TouchTargetSizeCheck" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/productIV"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_margin="@dimen/main_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailsTV"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Small"
        tools:src="@drawable/t_shirt_sample2" />

    <ImageButton
        android:id="@+id/favoriteButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:background="@drawable/custom_image_button_bigger"
        android:elevation="10dp"
        android:importantForAccessibility="no"
        android:padding="60dp"
        android:src="@drawable/ic_heart_bigger"
        app:layout_constraintCircleRadius="10dp"
        app:layout_constraintEnd_toEndOf="@id/productIV"
        app:layout_constraintTop_toTopOf="@id/productIV"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/productTitleTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_margin"
        android:layout_marginTop="@dimen/smaller_margin"
        android:fontFamily="@font/poppins_semi_bold"
        android:textColor="@color/black"
        android:textSize="@dimen/smaller_title_size"
        app:layout_constraintStart_toStartOf="@id/productIV"
        app:layout_constraintTop_toBottomOf="@id/productIV"
        tools:text="Regular Fit Slogan" />

    <TextView
        android:id="@+id/productDescriptionsTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_margin"
        android:layout_marginTop="@dimen/smaller_margin"
        android:layout_marginEnd="@dimen/main_margin"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/grey"
        android:textSize="@dimen/regular_text_size"
        app:layout_constraintEnd_toEndOf="@id/productIV"
        app:layout_constraintStart_toStartOf="@id/productTitleTV"
        app:layout_constraintTop_toBottomOf="@id/productTitleTV"
        tools:ignore="TextContrastCheck"
        tools:text="The name says it all, the right size slightly snugs the body leaving enough room for comfort in the sleeves and waist." />

    <TextView
        android:id="@+id/chooseSizeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_margin"
        android:layout_marginTop="@dimen/main_margin"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/choose_size"
        android:textColor="@color/black"
        android:textSize="@dimen/bigger_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/productDescriptionsTV" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chipPlaceHolder"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="@dimen/main_margin"
        android:backgroundTint="@color/white"
        android:text="S"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/title_size"
        android:textStyle="bold"
        app:chipCornerRadius="10dp"
        app:chipStrokeColor="@color/light_grey"
        app:chipStrokeWidth="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chooseSizeTV"
        tools:ignore="HardcodedText" />

    <View
        android:id="@+id/borderLine"
        style="@style/SectionLineStyle"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/main_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chipPlaceHolder" />

    <TextView
        android:id="@+id/priceTitleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_margin"
        android:layout_marginTop="@dimen/main_margin"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/price"
        android:textColor="@color/grey"
        android:textSize="@dimen/regular_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/borderLine"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/priceTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_margin"
        android:fontFamily="@font/poppins_semi_bold"
        android:textColor="@color/black"
        android:textSize="@dimen/smaller_title_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/priceTitleTV"
        tools:text="$1100" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addToCartButton"
        style="@style/MainButtonStyle"
        android:layout_width="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="@dimen/main_margin"
        android:text="@string/add_to_cart"
        app:icon="@drawable/ic_bag"
        app:iconGravity="textStart"
        app:iconPadding="10dp"
        app:layout_constraintBottom_toBottomOf="@id/priceTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/priceTV"
        app:layout_constraintTop_toTopOf="@id/priceTitleTV" />
</androidx.constraintlayout.widget.ConstraintLayout>